--- a/main.html
+++ b/main.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@csconnectpk - Countdown</title>
+    <title>CS Connect PK - Countdown</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
-        <h1>🚀 @csconnectpk Contest Countdown</h1>
+        <h1>CS Connect Pk Contest Countdown</h1>
         <p>The contest starts in:</p>
         <div id="countdown">7d 00:00:00</div>
     </div>
@@ -30,7 +30,7 @@
                 
                 if (timeLeft <= 0) {
                     clearInterval(timer);
-                    countdownElement.innerHTML = "🚀 The contest has begun!";
+                    countdownElement.innerHTML = "The contest has begun!";
                 }
             }
             
@@ -38,7 +38,7 @@
             updateTimer();
         }
 
-        startCountdown(7); // Start countdown from 7 days
+        startCountdown(7); 
     </script>
 </body>
 </html>
