--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>CS Connect Pk Contest Countdown</h1>
-        <p>The content ends in:</p>
+        <p>The contest ends in:</p>
         <div id="countdown">7d 00:00:00</div>
 
          <!--add link for competition rules-->
