added working links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="hero">
         <nav class="nav-container">
             <div class="logo">CS Connect Pakistan</div>
-            <a href="#" class="nav-cta">Join Discord</a>
+            <a href="https://discord.gg/ZbXkHq6JQQ" class="nav-cta">Join Discord</a>
         </nav>
 
         <div class="hero-content">
@@ -49,7 +49,7 @@
             </div>
 
             <div class="cta-container">
-                <a href="#" class="primary-cta">Join the Hackathon</a>
+                <a href="https://github.com/csconnectpk/csconnect" class="primary-cta">Join the Hackathon</a>
                 <a href="#rules" class="secondary-cta">Learn More</a>
             </div>
         </div>
@@ -118,7 +118,7 @@
                     </div>
                     <h3>Step 2: Fork Repository</h3>
                     <p>Fork the official GitHub repository to start building your project.</p>
-                    <a href="https://github.com/csconnect/hackathon" class="step-link" target="_blank">Fork
+                    <a href="https://github.com/csconnectpk/csconnect" class="step-link" target="_blank">Fork
                         Repository</a>
                 </div>
 
@@ -146,7 +146,7 @@
                     </div>
                     <h3>Step 5: Submit</h3>
                     <p>Create a Pull Request before the deadline to submit your entry.</p>
-                    <a href="https://github.com/csconnect/hackathon/pulls" class="step-link" target="_blank">Submit
+                    <a href="https://github.com/csconnectpk/csconnect/pulls" class="step-link" target="_blank">Submit
                         PR</a>
                 </div>
             </div>
@@ -184,16 +184,16 @@
             <div class="footer-section">
                 <h3>Connect with Us</h3>
                 <div class="social-links">
-                    <a href="https://discord.gg/csconnect" target="_blank" class="social-link">
+                    <a href="https://discord.gg/ZbXkHq6JQQ" target="_blank" class="social-link">
                         <i class="fab fa-discord"></i>
                     </a>
-                    <a href="https://github.com/csconnect" target="_blank" class="social-link">
+                    <a href="https://github.com/csconnectpk" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://twitter.com/csconnect" target="_blank" class="social-link">
+                    <a href="https://twitter.com" target="_blank" class="social-link">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="https://linkedin.com/company/csconnect" target="_blank" class="social-link">
+                    <a href="https://www.linkedin.com/feed/update/urn:li:activity:7272016213025644546/" target="_blank" class="social-link">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
@@ -216,7 +216,7 @@
                         target="_blank" class="share-button twitter">
                         <i class="fab fa-twitter"></i> Tweet
                     </a>
-                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://csconnect.github.io/hackathon"
+                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://github.com/orgs/csconnectpk"
                         target="_blank" class="share-button linkedin">
                         <i class="fab fa-linkedin"></i> Share
                     </a>
