--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="hero">
         <nav class="nav-container">
             <div class="logo">CS Connect Pakistan</div>
-            <a href="https://discord.gg/ZbXkHq6JQQ" class="nav-cta">Join Discord</a>
+            <a href="https://discord.gg/EUEQzWkW" class="nav-cta">Join Discord</a>
         </nav>
 
         <div class="hero-content">
@@ -184,7 +184,7 @@
             <div class="footer-section">
                 <h3>Connect with Us</h3>
                 <div class="social-links">
-                    <a href="https://discord.gg/ZbXkHq6JQQ" target="_blank" class="social-link">
+                    <a href="https://discord.gg/EUEQzWkW" target="_blank" class="social-link">
                         <i class="fab fa-discord"></i>
                     </a>
                     <a href="https://github.com/csconnectpk" target="_blank" class="social-link">
