--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                     <a href="https://github.com/csconnectpk" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://twitter.com" target="_blank" class="social-link">
-                        <i class="fab fa-twitter"></i>
+                    <a href="https://chat.whatsapp.com/IM8Yw2D2Fv2EwbHqnCqVhn" target="_blank" class="social-link">
+                        <i class="fab fa-whatsapp"></i>
                     </a>
                     <a href="https://www.linkedin.com/feed/update/urn:li:activity:7272016213025644546/" target="_blank" class="social-link">
                         <i class="fab fa-linkedin"></i>
