--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>CS Connect Hackathon 2024 - Build the Future with AI</title>
+    <title>CS Connect Hackathon 2025</title>
     <meta name="title" content="CS Connect Hackathon 2024 - Build the Future with AI">
     <meta name="description"
         content="Join Pakistan's premier student-led hackathon to build innovative websites using AI. Win prizes, learn from experts, and showcase your skills. Register now!">
