--- a/index.html
+++ b/index.html
@@ -106,14 +106,13 @@
     <header class="hero">
         <nav class="nav-container">
             <div class="logo">CS Connect Pakistan</div>
-            <a href="https://discord.gg/EUEQzWkW" class="nav-cta">Join Discord</a>
+            <a href="https://discord.gg/wXd34sJQ8j" class="nav-cta">Join Discord</a>
         </nav>
 
         <div class="hero-content">
             <h1 class="glitch" data-text="CS Connect Pakistan🇵🇰 Hackathon 2025">CS Connect Pakistan🇵🇰 Hackathon 2025
             </h1>
-            <p class="hero-subtitle">Test your skills and build the most beautiful and feature-rich yet static website
-                using AI-powered development!</p>
+            <p class="hero-subtitle">Join our virtual hackathon and build an amazing website for csconnect.pk! The best site will be hosted on this domainand the winning team will be recognized. Don’t miss this chance to showcase your skills and creativity!</p>
 
             <div class="countdown-container">
                 <div class="countdown-box">
@@ -158,7 +157,7 @@
                             <i class="fas fa-code-branch fa-2x"></i>
                             <h3>Step 2: Fork Repository</h3>
                             <p>Fork the official GitHub repository to start building your project.</p>
-                            <a href="https://github.com/csconnectpk/csconnect" class="btn btn-primary">Fork
+                            <a href="https://github.com/csconnectpk/website" target="_blank" class="btn btn-primary">Fork
                                 Repository</a>
                             <div class="step-connector"></div>
                         </div>
@@ -180,7 +179,7 @@
                             <i class="fas fa-check-circle fa-2x"></i>
                             <h3>Step 5: Submit</h3>
                             <p>Create a Pull Request before the deadline to submit your entry.</p>
-                            <a href="https://github.com/csconnectpk/csconnect/pulls" class="btn btn-primary">Submit
+                            <a href="https://github.com/csconnectpk/website/pulls" target="_blank" class="btn btn-primary">Submit
                                 PR</a>
                         </div>
                     </div>
@@ -201,18 +200,14 @@
                         </div>
                         <div class="rule-content">
                             <ul>
-                                <li><i class="fas fa-check"></i> <strong>Static Content:</strong> Pure HTML, CSS, and
-                                    JavaScript only</li>
-                                <li><i class="fas fa-check"></i> <strong>No Backend:</strong> No backend dependencies or
-                                    build steps</li>
-                                <li><i class="fas fa-check"></i> <strong>Static Assets:</strong> All content must be
-                                    static</li>
-                                <li><i class="fas fa-check"></i> <strong>Responsive Design:</strong> Must use
-                                    Flexbox/Grid</li>
-                                <li><i class="fas fa-check"></i> <strong>Performance:</strong> Optimized for fast
-                                    loading</li>
-                                <li><i class="fas fa-check"></i> <strong>Deployment:</strong> Must be deployable on
-                                    GitHub Pages</li>
+                                <li><i class="fas fa-check"></i> <strong>Static Content:</strong> Pure HTML, CSS, and JavaScript only</li>
+                                <li><i class="fas fa-check"></i> <strong>No Backend:</strong> No backend dependencies or build steps</li>
+                                <li><i class="fas fa-check"></i> <strong>Static Assets:</strong> All content must be static</li>
+                                <li><i class="fas fa-check"></i> <strong>Responsive Design:</strong> Must use Flexbox/Grid</li>
+                                <li><i class="fas fa-check"></i> <strong>Performance:</strong> Optimized for fast loading</li>
+                                <li><i class="fas fa-check"></i> <strong>Deployment:</strong> Must be deployable on GitHub Pages</li>
+                                <li><i class="fas fa-check"></i> <strong>Blog Section:</strong>Ability to add and remove blog posts.</li>
+                                <li><i class="fas fa-check"></i> <strong>SEO Friendly:</strong>Should be SEO friendly.</li>
                             </ul>
                         </div>
                     </div>
@@ -229,7 +224,7 @@
                                 <li><i class="fas fa-paint-brush"></i> <strong>Design & Aesthetics (40%)</strong>:
                                     UI/UX, visual appeal, animations</li>
                                 <li><i class="fas fa-mobile-alt"></i> <strong>Responsiveness (30%)</strong>:
-                                    Mobile-first approach, cross-device compatibility</li>
+                                    Mobile-first approach, cross-device compatibility. Tools like Google Page Speed Insights will be used for benchmarking.</li>
                                 <li><i class="fas fa-robot"></i> <strong>AI Integration (20%)</strong>: Creative use of
                                     AI tools for development</li>
                                 <li><i class="fas fa-code"></i> <strong>Code Quality (10%)</strong>: Clean,
@@ -249,7 +244,7 @@
                             <ul>
                                 <li><i class="fas fa-check"></i> <strong>Students:</strong> Currently enrolled in any
                                     Pakistani university</li>
-                                <li><i class="fas fa-check"></i> <strong>Team Size:</strong> 2-4 members per team</li>
+                                <li><i class="fas fa-check"></i> <strong>Team Size:</strong> 2, 4 members per team (max 4). You can also participate solo but there are bonus marks for team submissions.</li>
                                 <li><i class="fas fa-check"></i> <strong>Experience:</strong> Open to all skill levels
                                 </li>
                             </ul>
@@ -306,7 +301,7 @@
             <div class="footer-section">
                 <h3>Connect with Us</h3>
                 <div class="social-links">
-                    <a href="https://discord.gg/EUEQzWkW" target="_blank" class="social-link">
+                    <a href="https://discord.gg/wXd34sJQ8j" target="_blank" class="social-link">
                         <i class="fab fa-discord"></i>
                     </a>
                     <a href="https://github.com/csconnectpk" target="_blank" class="social-link">
@@ -324,7 +319,7 @@
 
             <div class="footer-section">
                 <h3>Have Questions?</h3>
-                <a href="https://github.com/csconnectpk/csconnect/issues/new" target="_blank" class="contact-link">
+                <a href="https://github.com/csconnectpk/website/issues/new" target="_blank" class="contact-link">
                     Open GitHub Issue
                 </a>
                 <a href="https://forms.gle/contact-form" target="_blank" class="contact-link">
